@@ -7,5 +7,6 @@
 #include <dolfin/log/Event.h>
 #include <dolfin/log/LogStream.h>
 #include <dolfin/log/Progress.h>
+#include <dolfin/log/Table.h>
 
 #endif
